<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_result"
        android:textSize="60sp"
        android:textAlignment="viewEnd"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button1"
            android:text="@string/_1"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/button2"
            android:text="@string/_2"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/button3"
            android:text="@string/_3"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/buttonAdd"
            android:text="@string/__"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button4"
            android:text="@string/_4"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/button5"
            android:text="@string/_5"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/button6"
            android:text="@string/_6"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/buttonSub"
            android:text="@string/a"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button7"
            android:text="@string/_7"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/button8"
            android:text="@string/_8"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/button9"
            android:text="@string/_9"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/buttonMul"
            android:text="@string/d"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/buttonClear"
            android:text="@string/clear"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/button0"
            android:text="@string/_0"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/buttonEqual"
            android:text="@string/h"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/buttonDiv"
            android:text="@string/t"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </TableRow>



</TableLayout>